--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- .....................First page..................... -->
     <section id="header">
       <div class="container">
-        <img class="logo" src="images/logo.png" alt="logo" />
+        <img class="logo" src="/logo.png" alt="logo" />
         <div class="header-text">
           <h1>
-            The purpose is to teach,<br />and bring learing to the people.
+            The purpose is to teach,<br />and bring learning to the people.
           </h1>
           <span class="square"></span>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita at
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedia at
             minus ex soluta aliquam. Delectus, sed suscipit? Vero modi soluta
             tenetur mollitia sunt pariatur? Quae impedit reprehenderit facere
             quas aspernatur?
