--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- .....................First page..................... -->
     <section id="header">
       <div class="container">
-        <img class="logo" src="/logo.png" alt="logo" />
+        .<img class="logo" src="./logo.png" alt="logo" />
         <div class="header-text">
           <h1>
             The purpose is to teach,<br />and bring learning to the people.
