--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <li><a href="#footer">Contact</a></li>
       </ul>
     </nav>
-    <img src="images/menu.png" alt="" id="menuBtn" />
+    <img src="./menu.png" alt="" id="menuBtn" />
 
     <!--.....................About Page ........................-->
 
     <section id="about">
       <div class="about-left-col">
-        <img src="images/about.png" alt="" />
+        <img src="./about.png" alt="" />
       </div>
       <div class="about-right-col">
         <div class="about-text">
@@ -85,17 +85,17 @@
       <div id="feature">
         <div class="feature-row">
           <div class="feature-col">
-            <img src="images/pic-1.png" alt="" />
+            <img src="./pic-1.png" alt="" />
             <h4>Learn Everywhere</h4>
             <p>Learn from Your Laptop, tablet and your choice</p>
           </div>
           <div class="feature-col">
-            <img src="images/pic-2.png" alt="" />
+            <img src="./pic-2.png" alt="" />
             <h4>Expert Teacher</h4>
             <p>Learn from industry experts</p>
           </div>
           <div class="feature-col">
-            <img src="images/pic-3.png" alt="" />
+            <img src="./pic-3.png" alt="" />
             <h4>Unlimited Access</h4>
             <p>Learn from Your Laptop, tablet and your choice</p>
           </div>
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div class="course-right-col">
-          <img src="images/course.png" alt="" />
+          <img src="./course.png" alt="" />
         </div>
       </div>
     </section>
@@ -145,7 +145,7 @@
     <!--........................ offer.......................... -->
     <section id="offer">
       <div class="about-left-col">
-        <img src="images/about.png" alt="" />
+        <img src="./about.png" alt="" />
       </div>
       <div class="about-right-col">
         <div class="about-text">
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="contact-right-col">
-            <img src="images/contact.png" alt="" />
+            <img src="./contact.png" alt="" />
           </div>
         </div>
       </div>
@@ -239,7 +239,7 @@
             </div>
 
             <div class="footer-logo">
-              <img src="images/logo.png" alt="" />
+              <img src="./logo.png" alt="" />
               <button class="common-btn">English</button>
             </div>
           </div>
@@ -250,9 +250,9 @@
     <!-- social-icon -->
 
     <div class="social-icon">
-      <img src="images/facebook.png" alt="" />
-      <img src="images/instagram.png" alt="" />
-      <img src="images/linkedin.png" alt="" />
+      <img src="./facebook.png" alt="" />
+      <img src="./instagram.png" alt="" />
+      <img src="./linkedin.png" alt="" />
     </div>
 
     <!--......................Script File........................ -->
