--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- .....................First page..................... -->
   <section id="header">
     <div class="container">
-      <img class="logo waitingForConnection" src="./images/logo.png" alt="logo" />
+      <img class="logo waitingForConnection" src="images/logo.png" alt="logo" />
       <div class="header-text">
         <h1>
           The purpose is to teach,<br />and bring learing to the people.
