--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- .....................First page..................... -->
   <section id="header">
     <div class="container">
-      <img class="logo waitingForConnection" src="images/logo.png" alt="logo" />
+      <img class="logo waitingForConnection" src="logo.png" alt="logo" />
       <div class="header-text">
         <h1>
           The purpose is to teach,<br />and bring learing to the people.
@@ -46,7 +46,7 @@
       <li><a href="#footer">Contact</a></li>
     </ul>
   </nav>
-  <img src="images/menu.png" alt="" id="menuBtn" />
+  <img src="menu.png" alt="" id="menuBtn" />
 
   <!--.....................About Page ........................-->
 
@@ -105,14 +105,14 @@
             going on</p>
         </div>
         <div class="feature-col">
-          <img src="images/pic-2.png" alt="" />
+          <img src="pic-2.png" alt="" />
           <h4> Practice and revise</h4>
           <p>
             Learning isn't just limited to classes with our practice section, mock tests and lecture notes shared as
             PDFs for your revision</p>
         </div>
         <div class="feature-col">
-          <img src="images/pic-3.png" alt="" />
+          <img src="pic-3.png" alt="" />
           <h4>Learn anytime, anywhere</h4>
 
           <p>
@@ -167,7 +167,7 @@
   <!--........................ offer.......................... -->
   <section id="offer">
     <div class="about-left-col">
-      <img src="images/about.png" alt="" />
+      <img src="about.png" alt="" />
     </div>
     <div class="about-right-col">
       <div class="about-text">
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class="contact-right-col">
-          <img src="images/contact.png" alt="" />
+          <img src="contact.png" alt="" />
         </div>
       </div>
     </div>
@@ -277,9 +277,9 @@
   <!-- social-icon -->
 
   <div class="social-icon">
-    <img src="images/facebook.png" alt="" />
-    <img src="images/instagram.png" alt="" />
-    <img src="images/linkedin.png" alt="" />
+    <img src="facebook.png" alt="" />
+    <img src="instagram.png" alt="" />
+    <img src="linkedin.png" alt="" />
   </div>
 
   <!--......................Script File........................ -->
