--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="square"></span>
 
         <p>
-        Teaching them new skills, knowledge, or learning <img src="images/logo.png" alt="logo"  class="line"/>
+        Teaching them new skills, knowledge, or learning <img src="logo.png" alt="logo"  class="line"/>
         is democratising education, making it accessible to all. Join the revolution, learn on India's largest learning
         platform.
 
@@ -52,7 +52,7 @@
 
   <section id="about">
     <div class="about-left-col">
-      <img src="images/about.png" alt="" />
+      <img src="about.png" alt="" />
     </div>
     <div class="about-right-col">
       <div class="about-text">
