--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li><a href="#footer">Contact</a></li>
     </ul>
   </nav>
-  <img src="menu.png" alt="" id="menuBtn" />
+  <img src="images/menu.png" alt="" id="menuBtn" />
 
   <!--.....................About Page ........................-->
 
@@ -98,7 +98,7 @@
     <div id="feature">
       <div class="feature-row">
         <div class="feature-col">
-          <img src="images/pic-1.png" alt="" />
+          <img src="pic-1.png" alt="" />
           <h4>Learn Everywhere</h4>
           <p>Daily live classes
             Chat with educators, ask questions, answer live polls, and get your doubts cleared - all while the class is
@@ -159,7 +159,7 @@
         </div>
       </div>
       <div class="course-right-col">
-        <img src="images/course.png" alt="" />
+        <img src="course.png" alt="" />
       </div>
     </div>
   </section>
@@ -266,7 +266,7 @@
           </div>
 
           <div class="footer-logo">
-            <img class="logo" src="images/logo.png" alt="logo" />
+            <img class="logo" src="logo.png" alt="logo" />
             
           </div>
         </div>
