--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li><a href="#footer">Contact</a></li>
     </ul>
   </nav>
-  <img src="images/menu.png" alt="" id="menuBtn" />
+  <img src="menu.png" alt="" id="menuBtn" />
 
   <!--.....................About Page ........................-->
 
@@ -98,21 +98,21 @@
     <div id="feature">
       <div class="feature-row">
         <div class="feature-col">
-          <img src="pic-1.png" alt="" />
+          <img src="pic-1.png" alt="pic-1" />
           <h4>Learn Everywhere</h4>
           <p>Daily live classes
             Chat with educators, ask questions, answer live polls, and get your doubts cleared - all while the class is
             going on</p>
         </div>
         <div class="feature-col">
-          <img src="pic-2.png" alt="" />
+          <img src="pic-2.png" alt="pic-2" />
           <h4> Practice and revise</h4>
           <p>
             Learning isn't just limited to classes with our practice section, mock tests and lecture notes shared as
             PDFs for your revision</p>
         </div>
         <div class="feature-col">
-          <img src="pic-3.png" alt="" />
+          <img src="pic-3.png" alt="pic-3" />
           <h4>Learn anytime, anywhere</h4>
 
           <p>
